test/errors/type/collections/set/__ge.yasl
echo collections.set().__ge(collections.set(), true)
